--- a/server/services/memesnz/src/index.html
+++ b/server/services/memesnz/src/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>memes.nz</title>
-    <link href="blink.css" rel="stylesheet" type="text/css">
+    <link href="blink.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1><marquee><blink>Why do I own this domain?</blink></marquee></h1>
+    <h1>
+      <marquee><blink>Why do I own this domain?</blink></marquee>
+    </h1>
   </body>
 </html>
